correct footer spacing

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -829,10 +829,6 @@ hr {
   .button_container {
   margin-left: 597px;
   }
-  footer {
-    margin-top: 22px;
-    margin-bottom: 52px;
-  }
 }
 
 @media (max-width: 991px) {
